ingress/dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-dasboard
  namespace: kubernetes-dashboard
  labels:
    name: myingress
spec:
  tls:
  - hosts:
    - dashboard.com
    secretName: dashboard-tls-secret
  rules:
  - host: dashboard.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: kubernetes-dashboard
            port: 
              number: 80
